Customize Bootstrap Variables

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,15 @@
+$body-bg:     #ecf0f1;
+$navbar-default-bg: #2c3e50;
+$navbar-default-link-color: white;
+$navbar-default-brand-color: #f1c40f;
+$font-family-sans-serif: 'Futura';
+$brand-primary: #f1c40f;
+$navbar-height: 45px;
+$jumbotron-bg: white;
 @import 'bootstrap';
+.center{
+	text-align: center;
+}
+.navbar-brand{
+	font-weight: bold;
+}
