--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,4 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 <h1>Welcome to DTSnap</h1>
-<p>Click here to  <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %></p>
+<p><%= link_to "Log in", "#", class: "btn btn-default btn-default" %>
+<%= link_to "Sign up", "#", class: "btn btn-primary btn-default" %>
+</p>
+
 </div>
