--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,5 +1,6 @@
 <div class="jumbotron center">
-<h1>Welcome to DTSnap</h1>
+<h1>Welcome to Snap N <i>Post</i></h1>
+
 <p><%= link_to "Log in", "#", class: "btn btn-default btn-default" %>
 <%= link_to "Sign up", "#", class: "btn btn-primary btn-default" %>
 </p>
